--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 </head>
 
 <body>
+    <a href="drive.html"></a>
     <section>
         <div class="page-padding">
             <div class="container">
