--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
             border: 1px solid black;
             border-radius: 8px;
         }
+        a{
+            font-size: 18px;
+            color: black;
+            text-decoration: none;
+        }
     </style>
 
 </head>
