--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             border: 1px solid black;
             border-radius: 8px;
         }
-        a{
+        .link{
             font-size: 18px;
             color: black;
             text-decoration: none;
@@ -153,7 +153,7 @@
 </head>
 
 <body>
-    <a href="drive.html">drive</a>
+    <a class="link" href="drive.html">drive</a>
     <section>
         <div class="page-padding">
             <div class="container">
